k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: practiceapp
spec:
  type: ClusterIP
  selector:
    app: practiceapp
  ports:
    - protocol: TCP
      port: 1111
      targetPort: 1111
