k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: practiceapp
spec:
  rules:
  - host: practiceapp.ppu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: practiceapp
            port:
              number: 5000
